--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <script defer>
       window.onload = function () {
         const yearBox = document.getElementById("year");
-        const date = new Date().getFullYear();
-        yearBox.textContent = date;
+        const currentYear = new Date().getFullYear();
+        yearBox.textContent = currentYear;
       };
     </script>
   </head>
