--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Email confirmation</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap"
+      rel="stylesheet"
+    />
     <style>
       * {
         padding: 0;
@@ -16,6 +22,7 @@
         const yearBox = document.getElementById("year");
         const currentYear = new Date().getFullYear();
         yearBox.textContent = currentYear;
+        console.log("year is = ", currentYear);
       };
     </script>
   </head>
@@ -202,10 +209,29 @@
           <p style="font-size: 14px; line-height: 24px; color: #262626">
             Stay in touch
           </p>
-          <div style="padding: 1rem">
-            <a href="/"> <img src="./instagram.svg" alt="instagram" /></a>
-            <a href="https://www.facebook.com/Kreatesell-100977575650709"
+          <div
+            style="
+              padding: 1rem;
+              display: flex;
+              align-items: center;
+              justify-content: center;
+            "
+          >
+            <!-- <a href="/"> <img src="./instagram.svg" alt="instagram" /></a> -->
+            <a
+              style="display: inline-block; margin-right: 0.2rem"
+              href="https://www.facebook.com/Kreatesell-100977575650709"
               ><img src="./facebook.svg" alt="facebook"
+            /></a>
+            <a
+              style="display: inline-block; margin-right: 0.2rem"
+              href="https://twitter.com/KreateSell"
+              ><img src="./Twitter.svg" alt="twitter"
+            /></a>
+            <a
+              style="display: inline-block"
+              href="https://www.linkedin.com/in/kreate-sell-b1291121a/"
+              ><img src="./linkedIn.svg" alt="linkedIn"
             /></a>
           </div>
           <footer
@@ -215,12 +241,22 @@
               line-height: 18px;
               text-align: center;
               margin-top: 1rem;
+              display: flex;
+              justify-content: center;
+              align-items: center;
             "
           >
-            <span style="color: #323232; font-size: 1rem; font-weight: bold"
+            <span
+              style="
+                color: #323232;
+                font-size: 1rem;
+                font-weight: bold;
+                margin-right: 0.2rem;
+              "
               >&copy;</span
             >
-            <span id="year"></span> KreateSell. All rights reserved
+            <span id="year" style="margin-right: 0.2rem"></span> KreateSell. All
+            rights reserved
           </footer>
         </div>
       </section>
