--- a/kreator-settlement-notification.html
+++ b/kreator-settlement-notification.html
@@ -85,7 +85,7 @@
                 line-height: 40px;
               "
             >
-              Congratulations Olumide Gerald,
+              Hi Olumide Gerald,
             </h1>
             <div>
               <p
@@ -96,11 +96,20 @@
                   margin-bottom: 1rem;
                 "
               >
-                Someone just made a successful purchase and made payment for
-                your product
-                <span style="color: #0072ef"
-                  >LAND OF HOPE AND OPPORTUNITIES.</span
-                >
+                Your payment request of
+                <span style="color: #0072ef">NGN 400, 000.00 </span> has been
+                successfully fulfilled. You are making it big time. Put more
+                effort into making more sales.
+              </p>
+              <p
+                style="
+                  font-weight: 500;
+                  font-size: 16px;
+                  line-height: 26px;
+                  margin-bottom: 1rem;
+                "
+              >
+                Go to your dashboard to view more information on this payment.
               </p>
 
               <h2
@@ -110,148 +119,12 @@
                   width: 100%;
                   font-weight: 800;
                   font-size: 40px;
-                  margin: 3rem auto;
+                  margin: 2rem auto 1rem;
                 "
               >
-                N45,6000
+                NGN 400, 000.00
               </h2>
               <section style="width: 100%; margin-top: 0.3rem">
-                <table
-                  style="
-                    width: 100%;
-                    max-width: 900px;
-                    margin: 1.5rem auto;
-                    padding: 0.2rem 2rem;
-                  "
-                >
-                  <thead
-                    style="
-                      color: #8c8c8c;
-                      text-transform: capitalize;
-                      font-weight: 500;
-                      font-size: 16px;
-                      line-height: 24px;
-                      margin-bottom: 0.2rem;
-                    "
-                  >
-                    <th>payment date</th>
-                    <th>order ID</th>
-                    <th>payment method</th>
-                  </thead>
-                  <tbody
-                    style="
-                      text-align: center;
-                      color: #595959;
-                      font-size: 20px;
-                      line-height: 30px;
-                      font-weight: 700;
-                    "
-                  >
-                    <tr>
-                      <td>12/08/22</td>
-                      <td>KRT10864</td>
-                      <td>Mastercard -0234</td>
-                    </tr>
-                  </tbody>
-                </table>
-                <div
-                  style="
-                    box-shadow: 0px 20px 200px rgba(34, 34, 34, 0.1);
-                    border-radius: 8px;
-                    padding: 20px 52px;
-                    background: #ffffff;
-                    width: 100%;
-                    margin-top: 1rem;
-                  "
-                >
-                  <p
-                    style="
-                      display: flex;
-                      justify-content: space-between;
-                      align-items: center;
-                      padding: 1rem 0.5rem;
-                      border-bottom: 1px solid #f0f0f0;
-                    "
-                  >
-                    <span
-                      style="
-                        display: inline-block;
-                        color: #8c8c8c;
-                        font-weight: 500;
-                        font-size: 16px;
-                        line-height: 26px;
-                      "
-                      >Product Name</span
-                    ><span
-                      style="
-                        display: inline-block;
-                        color: #595959;
-                        font-weight: 700;
-                        font-size: 18px;
-                        line-height: 28px;
-                      "
-                      >Principles of Design</span
-                    >
-                  </p>
-                  <p
-                    style="
-                      display: flex;
-                      justify-content: space-between;
-                      align-items: center;
-                      padding: 1rem 0.5rem;
-                      border-bottom: 1px solid #f0f0f0;
-                    "
-                  >
-                    <span
-                      style="
-                        display: inline-block;
-                        color: #8c8c8c;
-                        font-weight: 500;
-                        font-size: 16px;
-                        line-height: 26px;
-                      "
-                      >Customer Name</span
-                    ><span
-                      style="
-                        display: inline-block;
-                        color: #595959;
-                        font-weight: 700;
-                        font-size: 18px;
-                        line-height: 28px;
-                      "
-                      >Olumide John</span
-                    >
-                  </p>
-                  <p
-                    style="
-                      display: flex;
-                      justify-content: space-between;
-                      align-items: center;
-                      padding: 1rem 0.5rem;
-                      /* border-bottom: 1px solid #f0f0f0; */
-                    "
-                  >
-                    <span
-                      style="
-                        display: inline-block;
-                        color: #8c8c8c;
-                        font-weight: 500;
-                        font-size: 16px;
-                        line-height: 26px;
-                      "
-                      >Email Address</span
-                    ><span
-                      style="
-                        display: inline-block;
-                        color: #595959;
-                        font-weight: 700;
-                        font-size: 18px;
-                        line-height: 28px;
-                      "
-                      >olumidejohn@gmail.com</span
-                    >
-                  </p>
-                </div>
                 <a
                   href="#"
                   style="
