--- a/buyer-has-abandoned-transaction-email-thirdPage.html
+++ b/buyer-has-abandoned-transaction-email-thirdPage.html
@@ -96,10 +96,10 @@
                   margin-bottom: 1rem;
                 "
               >
-                Have you forgotten me?
                 <span style="color: #0072ef"
                   >LAND OF HOPE AND OPPORTUNITIES</span
                 >
+                has patiently been waiting for you since you left.
               </p>
               <p
                 style="
@@ -109,19 +109,9 @@
                   margin-bottom: 1rem;
                 "
               >
-                I’m not yet gone forever, you can still own your copy of
-                PRODUCT_NAME that makes you happy!
-              </p>
-              <p
-                style="
-                  font-weight: 500;
-                  font-size: 16px;
-                  line-height: 26px;
-                  margin-bottom: 1rem;
-                "
-              >
-                We have a flexible payment gateway to serve any payment method
-                you prefer.
+                No action has been taken from you to retrieve product_Name the
+                gamechanger. <br />
+                Maybe you have not been opportuned to complete the payment.
               </p>
 
               <p
@@ -132,8 +122,21 @@
                   margin-bottom: 1rem;
                 "
               >
-                We have a flexible payment gateway to serve any payment method
-                you prefer.
+                There is a lot going on and it's very easy to forget things. But
+                before it’s gone forever, you’ve got the chance to take
+                advantage of this moment to own your copy.
+              </p>
+
+              <p
+                style="
+                  font-weight: 500;
+                  font-size: 16px;
+                  line-height: 26px;
+                  margin-bottom: 1rem;
+                "
+              >
+                Instantly get your hands on Product_Name by completing your
+                payment now!
               </p>
 
               <section
