added quick refactor accross all pages

--- a/account-creation.html
+++ b/account-creation.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Email confirmation</title>
+    <title>Account creation confirmation Email</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -78,6 +78,8 @@
                 text-transform: capitalize;
                 font-weight: bold;
                 color: #595959;
+                max-width: 676px;
+                margin: 0 auto;
                 margin-top: 2rem;
                 margin-bottom: 0.5rem;
                 font-weight: 800;
@@ -87,7 +89,7 @@
             >
               Please Verify your email address
             </h1>
-            <div>
+            <div style="max-width: 676px; margin: 0 auto">
               <p
                 style="
                   font-weight: 500;
