--- a/buyer-order-successful.html
+++ b/buyer-order-successful.html
@@ -78,6 +78,7 @@
                 text-transform: capitalize;
                 font-weight: bold;
                 color: #595959;
+                max-width: 676px; margin: 0 auto;
                 margin-top: 2rem;
                 margin-bottom: 0.5rem;
                 font-weight: 800;
@@ -87,7 +88,7 @@
             >
               Thank you for your purchase!
             </h1>
-            <div>
+            <div style="max-width: 676px; margin: 0 auto;">
               <p
                 style="
                   font-weight: 500;
