--- a/user-password-reset.html
+++ b/user-password-reset.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>2FA confirmation</title>
+    <title>User password reset</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -57,7 +57,7 @@
         >
           <img
             style="width: 200px; height: 200px; margin-bottom: 2rem"
-            src="./non-existentImage.png"
+            src="./check.png"
             alt="buyer's Out"
           />
         </div>
@@ -87,7 +87,7 @@
                 line-height: 40px;
               "
             >
-              Hello GraceMoments!
+              Reset Your Kreatesell Password
             </h1>
             <div style="max-width: 676px; margin: 0 auto">
               <p
@@ -98,36 +98,79 @@
                   margin-bottom: 1rem;
                 "
               >
-                You have successfully activated 2FA Authentication on your
-                account on
-                <a href="#" style="color: #0072ef; cursor: pointer"
-                  >Kreatesell.com</a
+                Hi GraceMoments,
+              </p>
+              <p
+                style="
+                  font-weight: 500;
+                  font-size: 16px;
+                  line-height: 26px;
+                  margin-bottom: 1rem;
+                "
+              >
+                You asked us to send you a password reset link for your account.
+                If you didn’t make this request, please ignore this email. If
+                you did make a request for this, kindly click the button below:
+              </p>
+              <div
+                style="
+                  width: 100%;
+                  display: flex;
+                  justify-content: center;
+                  align-items: center;
+                  margin: 3rem auto;
+                "
+              >
+                <a
+                  style="
+                    background-color: #0072ef;
+                    text-transform: capitalize;
+                    padding: 16px;
+                    border-radius: 8px;
+                    color: #ffffff;
+                    outline: none;
+                    border: none;
+                    cursor: pointer;
+                    font-weight: 700;
+                    margin: 1rem auto;
+                    text-decoration: none;
+                    margin-bottom: 1rem;
+                    display: inline-block;
+                  "
+                  href="#"
                 >
-              </p>
-              <p
-                style="
-                  font-weight: 500;
-                  font-size: 16px;
-                  line-height: 26px;
-                  margin-bottom: 1rem;
-                "
-              >
-                This will make your account secure from fraudsters. Don’t
-                forget, you’ll be receiving authentication code on this email to
-                be able to access your account in future.
-              </p>
+                  reset password
+                </a>
+              </div>
+              <div>
+                <p
+                  style="
+                    font-weight: 500;
+                    font-size: 16px;
+                    line-height: 26px;
+                    margin-bottom: 1rem;
+                  "
+                >
+                  You can also copy and paste this URL into your web browser
+                  <a
+                    style="color: #0072ef; text-decoration: none"
+                    href="https://kreatesell.com/forgot-password/66476767674/hjjfhjghg_hfjjhfjhf"
+                    >https://kreatesell.com/forgot-password/66476767674/hjjfhjghg_hfjjhfjhf</a
+                  >
+                </p>
+                <p
+                  style="
+                    font-weight: 500;
+                    font-size: 16px;
+                    line-height: 26px;
+                    margin-bottom: 1rem;
+                  "
+                ></p>
 
-              <p
-                style="
-                  font-weight: 500;
-                  font-size: 16px;
-                  line-height: 26px;
-                  margin-bottom: 1rem;
-                "
-              >
-                Thanks.
-              </p>
-
+                If you didn't make a request for this, simply ignore this email.
+                Don’t attempt or make an attempt to forward this email to any
+                third-party.
+              </div>
               <section style="width: 100%; margin-top: 0.3rem">
                 <p
                   style="
