--- a/account-creation.html
+++ b/account-creation.html
@@ -148,9 +148,13 @@
           style="
             text-align: center;
             font-size: 14px;
-            line-height: 24px;
-            margin-top: -8rem;
-            padding: 0.8rem;
+            line-height: 2re4px;
+            margin-top: -7rem;
+            padding: 2rem 0.8rem 0.8rem;
+            border-top: 2px solid #f0f0f0;
+            background-image: url('./bgImg.png');
+            background-repeat: repeat;
+            background-position: 50% 50%;
           "
         >
           Got any concerns? Reach out to us on
@@ -163,7 +167,7 @@
         <div
           style="
             background-color: #e6f7ff;
-            margin-top: 3rem;
+            margin-top: 1rem;
             text-align: center;
             padding: 2rem 2rem 1rem;
           "
@@ -234,6 +238,9 @@
               style="display: inline-block"
               href="https://www.linkedin.com/in/kreate-sell-b1291121a/"
               ><img src="./linkedIn.svg" alt="linkedIn"
+            /></a>
+            <a style="display: inline-block" href="https://wa.me/09016324945"
+              ><img src="./whatsapp.svg" alt="WhatsApp"
             /></a>
           </div>
           <footer
