--- a/buyer-has-abandoned-transaction-email-thirdPage.html
+++ b/buyer-has-abandoned-transaction-email-thirdPage.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Email confirmation</title>
+    <title>buyer off - third page</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -78,7 +78,8 @@
                 text-transform: capitalize;
                 font-weight: bold;
                 color: #595959;
-                max-width: 676px; margin: 0 auto;
+                max-width: 676px;
+                margin: 0 auto;
                 margin-top: 2rem;
                 margin-bottom: 0.5rem;
                 font-weight: 800;
@@ -88,7 +89,7 @@
             >
               Hello GraceMoments!
             </h1>
-            <div style="max-width: 676px; margin: 0 auto;">
+            <div style="max-width: 676px; margin: 0 auto">
               <p
                 style="
                   font-weight: 500;
@@ -187,8 +188,12 @@
             text-align: center;
             font-size: 14px;
             line-height: 24px;
-            margin-top: -8rem;
-            padding: 0.8rem;
+            margin-top: -7rem;
+            padding: 2rem 0.8rem 0.8rem;
+            border-top: 2px solid #f0f0f0;
+            background-image: url('./bgImg.png');
+            background-repeat: repeat;
+            background-position: 50% 50%;
           "
         >
           Got any concerns? Reach out to us on
@@ -201,7 +206,7 @@
         <div
           style="
             background-color: #e6f7ff;
-            margin-top: 3rem;
+            margin-top: 1rem;
             text-align: center;
             padding: 2rem 2rem 1rem;
           "
@@ -272,6 +277,9 @@
               style="display: inline-block"
               href="https://www.linkedin.com/in/kreate-sell-b1291121a/"
               ><img src="./linkedIn.svg" alt="linkedIn"
+            /></a>
+             <a style="display: inline-block" href="https://wa.me/09016324945"
+              ><img src="./whatsapp.svg" alt="WhatsApp"
             /></a>
           </div>
           <footer
