--- a/new-user-verification.html
+++ b/new-user-verification.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Email confirmation</title>
+    <title>New user verification Email confirmation</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -66,7 +66,7 @@
             background-image: url('./bgImg.png');
             background-repeat: repeat;
             background-position: 50% 50%;
-            /* border: 1px solid red; */
+
             position: relative;
             top: -180px;
             padding: 5rem 0.2rem 2rem 0.2rem;
@@ -124,8 +124,12 @@
             text-align: center;
             font-size: 14px;
             line-height: 24px;
-            margin-top: -8rem;
-            padding: 0.8rem;
+            margin-top: -7rem;
+            padding: 2rem 0.8rem 0.8rem;
+            border-top: 2px solid #f0f0f0;
+            background-image: url('./bgImg.png');
+            background-repeat: repeat;
+            background-position: 50% 50%;
           "
         >
           Got any concerns? Reach out to us on
@@ -138,7 +142,7 @@
         <div
           style="
             background-color: #e6f7ff;
-            margin-top: 3rem;
+            margin-top: 1rem;
             text-align: center;
             padding: 2rem 2rem 1rem;
           "
@@ -209,6 +213,9 @@
               style="display: inline-block"
               href="https://www.linkedin.com/in/kreate-sell-b1291121a/"
               ><img src="./linkedIn.svg" alt="linkedIn"
+            /></a>
+             <a style="display: inline-block" href="https://wa.me/09016324945"
+              ><img src="./whatsapp.svg" alt="WhatsApp"
             /></a>
           </div>
           <footer
