changed linkedin margin

--- a/buyer-has-abandoned-transaction-email-secondPage.html
+++ b/buyer-has-abandoned-transaction-email-secondPage.html
@@ -271,7 +271,7 @@
               ><img src="./Twitter.svg" alt="twitter"
             /></a>
             <a
-              style="display: inline-block"
+              style="display: inline-block; margin-right: 0.2rem"
               href="https://www.linkedin.com/in/kreate-sell-b1291121a/"
               ><img src="./linkedIn.svg" alt="linkedIn"
             /></a>
