--- a/kreator-settlement-notification.html
+++ b/kreator-settlement-notification.html
@@ -248,11 +248,11 @@
               ><img src="./Twitter.svg" alt="twitter"
             /></a>
             <a
-              style="display: inline-block"
+              style="display: inline-block; margin-right: 0.2rem"
               href="https://www.linkedin.com/in/kreate-sell-b1291121a/"
               ><img src="./linkedIn.svg" alt="linkedIn"
             /></a>
-             <a style="display: inline-block" href="https://wa.me/09016324945"
+            <a style="display: inline-block" href="https://wa.me/09016324945"
               ><img src="./whatsapp.svg" alt="WhatsApp"
             /></a>
           </div>
