--- a/buyer-has-abandoned-transaction-email-firstPage.html
+++ b/buyer-has-abandoned-transaction-email-firstPage.html
@@ -172,7 +172,14 @@
                 >
                   Complete my purchase
                 </a>
-                <p style="color: #595959; font-size: 14px; line-height: 24px">
+                <p
+                  style="
+                    color: #595959;
+                    font-size: 14px;
+                    line-height: 24px;
+                    margin-top: 1rem;
+                  "
+                >
                   Olumide Gerald
                 </p>
                 <p
@@ -182,7 +189,6 @@
                     font-weight: 500;
                     text-align: center;
                     width: 100%;
-                    margin-top: 3rem;
                   "
                 >
                   KreateSell Team
@@ -286,7 +292,7 @@
               href="https://www.linkedin.com/in/kreate-sell-b1291121a/"
               ><img src="./linkedIn.svg" alt="linkedIn"
             /></a>
-             <a style="display: inline-block" href="https://wa.me/09016324945"
+            <a style="display: inline-block" href="https://wa.me/09016324945"
               ><img src="./whatsapp.svg" alt="WhatsApp"
             /></a>
           </div>
