added 2fa image

--- a/2-factor-authentication-email.html
+++ b/2-factor-authentication-email.html
@@ -57,7 +57,7 @@
         >
           <img
             style="width: 200px; height: 200px; margin-bottom: 2rem"
-            src="./non-existentImage.png"
+            src="./2fa.png"
             alt="buyer's Out"
           />
         </div>
